# PythonRepoTemplate

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/my_package/: __initi__.py  main.py  utils.py
tests/: test_main.py
